heyrict.diesel-aggr-sample.1235a70e472c8a31e548eb5f2006f44f6247587d
Running as unit: run-p2062580-i14642688.scope; invocation ID: 74ab32f769e24a10908d824875f6c2e2
   Compiling version_check v0.9.4
   Compiling proc-macro2 v1.0.37
   Compiling libc v0.2.125
   Compiling unicode-xid v0.2.2
    Checking cfg-if v1.0.0
   Compiling autocfg v1.1.0
   Compiling parking_lot_core v0.8.5
    Checking instant v0.1.12
    Checking smallvec v1.8.0
    Checking scopeguard v1.1.0
   Compiling syn v1.0.92
   Compiling lock_api v0.4.7
   Compiling proc-macro-error-attr v1.0.4
   Compiling proc-macro-error v1.0.4
   Compiling log v0.4.16
   Compiling pq-sys v0.4.6
    Checking itoa v1.0.1
    Checking bitflags v1.3.2
    Checking byteorder v1.4.3
   Compiling quote v1.0.18
    Checking dotenv v0.15.0
    Checking parking_lot v0.11.2
    Checking scheduled-thread-pool v0.2.5
    Checking r2d2 v0.8.9
   Compiling diesel_derives v2.0.0-rc.0 (https://github.com/weiznich/diesel?branch=fix%2F3156#fb70fd70)
    Checking diesel v2.0.0-rc.0 (https://github.com/weiznich/diesel?branch=fix%2F3156#fb70fd70)
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/git/checkouts/diesel-ff3178cdc29af4e4/fb70fd7/diesel/src/query_builder/ast_pass.rs:204:51
    |
204 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
